Revert fix Scrollbar on Mozilla and add Fix Chip Ripple in firefox

--- a/client/packages/veb-ui/src/css/veb.css
+++ b/client/packages/veb-ui/src/css/veb.css
@@ -7834,7 +7834,7 @@ table {
   font-size: 12px;
   background-color: rgba(0, 0, 0, 0.1);
   padding: 4px 12px;
-  display: inline-table;
+  display: inline-flex;
   -webkit-border-radius: 14px;
   border-radius: 14px;
   background-clip: padding-box;
@@ -7844,7 +7844,8 @@ table {
   -o-transition: all 0.2s cubic-bezier(0.4, 0, 0.2, 1), opacity 0.25s cubic-bezier(0.4, 0, 0.2, 1);
   transition: all 0.2s cubic-bezier(0.4, 0, 0.2, 1), opacity 0.25s cubic-bezier(0.4, 0, 0.2, 1);
   cursor: default;
-  margin: 4px 4px; }
+  margin: 4px 4px;
+  overflow: hidden; }
   .veb-chip .veb-chip-text {
     vertical-align: middle; }
   .veb-chip .veb-chip-close {
